[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/main/puzzle/pan/FryingPansUi.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/theme/h2.theme" type="Theme" id=2]
[ext_resource path="res://src/demo/puzzle/pan/frying-pans-ui-demo.gd" type="Script" id=3]

[node name="FryingPansDemo" type="Node"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 100.0
color = Color( 0.34902, 0.560784, 0.764706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FryingPansUi" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 100.0

[node name="Remaining" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 37.7338
margin_top = 71.4717
margin_right = 216.734
margin_bottom = 175.472
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Remaining"]
margin_right = 179.0
margin_bottom = 45.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Remaining"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Remaining"]
margin_top = 49.0
margin_right = 179.0
margin_bottom = 104.0
alignment = 1

[node name="SpinBox" type="SpinBox" parent="Remaining/HBoxContainer"]
margin_left = 22.0
margin_right = 156.0
margin_bottom = 55.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
min_value = 1.0
max_value = 999.0
value = 3.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.716
margin_top = 70.4122
margin_right = -85.7158
margin_bottom = 174.412
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Max"]
margin_right = 134.0
margin_bottom = 45.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Max"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Max"]
margin_top = 49.0
margin_right = 134.0
margin_bottom = 104.0
alignment = 1

[node name="SpinBox" type="SpinBox" parent="Max/HBoxContainer"]
margin_right = 134.0
margin_bottom = 55.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
min_value = 1.0
max_value = 999.0
value = 3.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="CheckBox" parent="."]
margin_left = 437.0
margin_top = 179.0
margin_right = 547.0
margin_bottom = 232.0
theme = ExtResource( 2 )
text = "Gold"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Gold" to="." method="_on_Gold_toggled"]
[connection signal="value_changed" from="Max/HBoxContainer/SpinBox" to="." method="_on_TotalSpinBox_value_changed"]
[connection signal="value_changed" from="Remaining/HBoxContainer/SpinBox" to="." method="_on_RemainingSpinBox_value_changed"]
